--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -5,62 +5,6 @@
     box-sizing: border-box;
 }
 
-body {
-    font-size: 13px;
-    line-height: 18px;
-    color:$BandSite-Black;
-    margin: 0px;
-
-
-    @include tablet {
-        font-size: 14px;
-        line-height: 22px;
-    }
-}
-
-.page-header {
-    font-size: 24px;
-    color: $White;
-    // float: left;
-    line-height: 32px;
-    padding-left: 16px;
-
-    @include tablet {
-        font-size: 60px;
-        line-height: 68px;
-        padding-left: 36px;
-    }
-    @include desktop {
-        padding-left: auto;
-    }
-}
-
-.section-header {
-    font-size: 24px;
-    line-height: 32px;
-    color: $BandSite-DarkBlack;
-
-    @include tablet {
-        font-size: 36px;
-        line-height: 44px;
-    }
-}
-
-.subheader {
-    font-size: 14px;
-    line-height: 22px;
-    color: $BandSite-DarkBlack;
-
-    @include tablet {
-        font-size: 24px;
-        line-height: 32px;
-    }
-}
-
-.subcopy {
-    font-size: 14px;
-    color:$BandSite-DarkBlack;
-}
 
 .hero {
     position: relative;
@@ -88,22 +32,21 @@ body {
 
 .about {
     background-color: $White;
+
+    &__container {
     margin: auto;
     width: 90%;
-
     
-    @include tablet {
-        width: 80%;
+        @include tablet {
+            width: 80%;
+        }
     }
 
     &__image--small {
             object-fit: cover;
             width: 100%;
-            height: 100%;
-
+            max-height: 350px;
         }
-
-    
 
     &__paragraphs {
         display: flex;
@@ -111,33 +54,35 @@ body {
         @include tablet {
         display: inline-block;
         width: 45%;
-
-        &--copy {
-            justify-content: space-between;
         }
-    }
-
-        // &--copy {
-        //     width: 100%;
-
-        //     @include tablet {
-        //         width: 45%;
-        //     }
-        // }
     }
 }
 
 .photo-gallery {
-    display: flex;
-    z-index: 0;
+    background-color:$Mercury;
+    padding-top: 16px;
 
     &__container {
-        z-index: 1;
-        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        max-width: 100%;
+        padding: auto;
+    }
 
-        &--images {
-            max-height: 300px;
-            width: 100%;
+    &__item {
+        width: 100%;
+        box-sizing: border-box;
+        padding:8px 16px;
+        
+        @include tablet {
+            width: 30%;
         }
+    }
+
+    &__image {
+        max-width: 100%;
+        height: auto;
+        display: block;
     }
 }
