--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,3 +1,165 @@
+@font-face {
+  font-family: "AvenirNextLTPro";
+  src: url("C:UsersuserOneDrive\documentsstefan-reeves-bandsite\assets\fonts\avenirNextLTPro.ttf'") format("truetype");
+}
+body {
+  font-size: 13px;
+  line-height: 18px;
+  color: #323232;
+  margin: 0px;
+  font-family: "AvenirNextLTPro";
+}
+@media screen and (min-width: 768px) {
+  body {
+    font-size: 14px;
+    line-height: 22px;
+  }
+}
+
+.page-header {
+  font-size: 24px;
+  color: #FFFFFF;
+  line-height: 32px;
+  padding-left: 16px;
+}
+@media screen and (min-width: 768px) {
+  .page-header {
+    font-size: 60px;
+    line-height: 68px;
+    padding-left: 36px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .page-header {
+    padding-left: auto;
+  }
+}
+
+.section-header {
+  font-size: 24px;
+  line-height: 32px;
+  color: #000000;
+  padding-left: 16px;
+}
+@media screen and (min-width: 768px) {
+  .section-header {
+    font-size: 36px;
+    line-height: 44px;
+    padding-left: 36px;
+  }
+}
+
+.subheader {
+  font-size: 14px;
+  line-height: 22px;
+  color: #000000;
+}
+@media screen and (min-width: 768px) {
+  .subheader {
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
+
+.subcopy {
+  font-size: 14px;
+  color: #000000;
+}
+
+footer {
+  font-size: 13px;
+  line-height: 18px;
+  color: #FFFFFF;
+  margin: 0px;
+}
+@media screen and (min-width: 768px) {
+  footer {
+    font-size: 14px;
+    line-height: 2opx;
+  }
+}
+
+@font-face {
+  font-family: "AvenirNextLTPro";
+  src: url("C:UsersuserOneDrive\documentsstefan-reeves-bandsite\assets\fonts\avenirNextLTPro.ttf'") format("truetype");
+}
+body {
+  font-size: 13px;
+  line-height: 18px;
+  color: #323232;
+  margin: 0px;
+  font-family: "AvenirNextLTPro";
+}
+@media screen and (min-width: 768px) {
+  body {
+    font-size: 14px;
+    line-height: 22px;
+  }
+}
+
+.page-header {
+  font-size: 24px;
+  color: #FFFFFF;
+  line-height: 32px;
+  padding-left: 16px;
+}
+@media screen and (min-width: 768px) {
+  .page-header {
+    font-size: 60px;
+    line-height: 68px;
+    padding-left: 36px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .page-header {
+    padding-left: auto;
+  }
+}
+
+.section-header {
+  font-size: 24px;
+  line-height: 32px;
+  color: #000000;
+  padding-left: 16px;
+}
+@media screen and (min-width: 768px) {
+  .section-header {
+    font-size: 36px;
+    line-height: 44px;
+    padding-left: 36px;
+  }
+}
+
+.subheader {
+  font-size: 14px;
+  line-height: 22px;
+  color: #000000;
+}
+@media screen and (min-width: 768px) {
+  .subheader {
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
+
+.subcopy {
+  font-size: 14px;
+  color: #000000;
+}
+
+footer {
+  font-size: 13px;
+  line-height: 18px;
+  color: #FFFFFF;
+  margin: 0px;
+}
+@media screen and (min-width: 768px) {
+  footer {
+    font-size: 14px;
+    line-height: 2opx;
+  }
+}
+
 .navbar {
   background-color: #323232;
   height: 60px;
@@ -71,15 +233,16 @@
   font-size: 13px;
 }
 
-* {
-  box-sizing: border-box;
+@font-face {
+  font-family: "AvenirNextLTPro";
+  src: url("C:UsersuserOneDrive\documentsstefan-reeves-bandsite\assets\fonts\avenirNextLTPro.ttf'") format("truetype");
 }
-
 body {
   font-size: 13px;
   line-height: 18px;
   color: #323232;
   margin: 0px;
+  font-family: "AvenirNextLTPro";
 }
 @media screen and (min-width: 768px) {
   body {
@@ -125,26 +288,125 @@ body {
   font-size: 14px;
   line-height: 22px;
   color: #000000;
-  float: left;
-  padding-left: 16px;
 }
 @media screen and (min-width: 768px) {
   .subheader {
     font-size: 24px;
     line-height: 32px;
-    padding-left: 36px;
   }
 }
 
 .subcopy {
   font-size: 14px;
-  font: 14px #000000;
-  padding: 16px;
+  color: #000000;
+}
+
+footer {
+  font-size: 13px;
+  line-height: 18px;
+  color: #FFFFFF;
+  margin: 0px;
 }
 @media screen and (min-width: 768px) {
-  .subcopy {
+  footer {
+    font-size: 14px;
+    line-height: 2opx;
+  }
+}
+
+.footer {
+  background-color: #323232;
+  font-size: 13px;
+  line-height: 18px;
+  color: #FFFFFF;
+  margin: 0px;
+  max-width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    display: flex;
+  }
+}
+.footer__menu {
+  width: 100%;
+  padding-left: 16px;
+  padding-right: 16px;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .footer__contact {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+}
+.footer__social {
+  justify-content: space-between;
+  display: flex;
+  max-width: 120px;
+  max-height: 20px;
+}
+@media screen and (min-width: 768px) {
+  .footer__social {
+    justify-content: left;
+    display: flex;
+    margin: 0px 35px;
+    padding: 0px;
+  }
+}
+.footer__social--icons {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .footer__social--icons {
+    width: 200px;
+    padding-left: 10px;
+  }
+}
+.footer__management {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 80%;
+}
+@media screen and (min-width: 768px) {
+  .footer__management {
+    flex-direction: row;
+  }
+}
+.footer__locations {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .footer__locations {
+    width: 30%;
+  }
+}
+.footer__header {
+  font-size: 24px;
+  line-height: 32px;
+  color: #FFFFFF;
+}
+@media screen and (min-width: 768px) {
+  .footer__header {
+    font-size: 36px;
+    line-height: 44px;
     padding-left: 36px;
   }
+}
+.footer__copy {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 .hero {
@@ -167,4 +429,59 @@ body {
   align-items: center;
   height: 40vh;
   position: relative;
+}
+
+.about {
+  background-color: #FFFFFF;
+}
+.about__container {
+  margin: auto;
+  width: 90%;
+}
+@media screen and (min-width: 768px) {
+  .about__container {
+    width: 80%;
+  }
+}
+.about__image--small {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  max-height: 350px;
+}
+.about__paragraphs {
+  display: flex;
+}
+@media screen and (min-width: 768px) {
+  .about__paragraphs {
+    display: inline-block;
+    width: 45%;
+  }
+}
+
+.photo-gallery {
+  background-color: #FAFAFA;
+  padding-top: 10px;
+}
+.photo-gallery__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 100%;
+  margin-bottom: 15px;
+}
+.photo-gallery__item {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 8px 16px;
+}
+@media screen and (min-width: 768px) {
+  .photo-gallery__item {
+    width: 30%;
+  }
+}
+.photo-gallery__image {
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
