--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,6 +1,7 @@
 @import './partials/variables';
 @import './partials/navbar';
 @import './partials/footer';
+@import './partials/main';
 
 * {
     box-sizing: border-box;
@@ -33,6 +34,11 @@
 
 .about {
     background-color: $White;
+    margin-bottom: 24px;
+    
+        @include tablet {
+            margin-bottom: 36px;
+        }
 
     &__container {
     margin: auto;
@@ -49,12 +55,31 @@
             max-height: 350px;
         }
 
+        &__quote {
+            margin-top: 16px;
+            margin-bottom: 24px;
+
+            @include tablet {
+                margin-top: 16px;
+                margin-bottom: 36px;
+            }
+        }
+
     &__paragraphs {
-        display: flex;
+            display: inline-block;
+
 
         @include tablet {
-        display: inline-block;
-        width: 45%;
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+        }
+    }
+
+    &__text {
+        
+        @include tablet {
+            padding-right: 15px;
         }
     }
 }
@@ -86,4 +111,47 @@
         height: auto;
         display: block;
     }
+}
+
+.comment-form {
+    width: 70%;
+    align-items: end;
+
+
+    &__button {
+        display:inline;
+        background-color: $BandSite-Black;
+        width: 100%;
+    }
+}
+
+.comment-list {
+    background-color: $White;
+    padding: 10px;
+
+    &__item {
+
+
+    }
+
+    &__name {
+
+
+    }
+
+    &__review {
+
+
+    }
+
+    &__timestamp {
+
+
+    }
+
+
+
+
+
+
 }
