--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,165 +1,3 @@
-@font-face {
-  font-family: "AvenirNextLTPro";
-  src: url("C:UsersuserOneDrive\documentsstefan-reeves-bandsite\assets\fonts\avenirNextLTPro.ttf'") format("truetype");
-}
-body {
-  font-size: 13px;
-  line-height: 18px;
-  color: #323232;
-  margin: 0px;
-  font-family: "AvenirNextLTPro";
-}
-@media screen and (min-width: 768px) {
-  body {
-    font-size: 14px;
-    line-height: 22px;
-  }
-}
-
-.page-header {
-  font-size: 24px;
-  color: #FFFFFF;
-  line-height: 32px;
-  padding-left: 16px;
-}
-@media screen and (min-width: 768px) {
-  .page-header {
-    font-size: 60px;
-    line-height: 68px;
-    padding-left: 36px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .page-header {
-    padding-left: auto;
-  }
-}
-
-.section-header {
-  font-size: 24px;
-  line-height: 32px;
-  color: #000000;
-  padding-left: 16px;
-}
-@media screen and (min-width: 768px) {
-  .section-header {
-    font-size: 36px;
-    line-height: 44px;
-    padding-left: 36px;
-  }
-}
-
-.subheader {
-  font-size: 14px;
-  line-height: 22px;
-  color: #000000;
-}
-@media screen and (min-width: 768px) {
-  .subheader {
-    font-size: 24px;
-    line-height: 32px;
-  }
-}
-
-.subcopy {
-  font-size: 14px;
-  color: #000000;
-}
-
-footer {
-  font-size: 13px;
-  line-height: 18px;
-  color: #FFFFFF;
-  margin: 0px;
-}
-@media screen and (min-width: 768px) {
-  footer {
-    font-size: 14px;
-    line-height: 2opx;
-  }
-}
-
-@font-face {
-  font-family: "AvenirNextLTPro";
-  src: url("C:UsersuserOneDrive\documentsstefan-reeves-bandsite\assets\fonts\avenirNextLTPro.ttf'") format("truetype");
-}
-body {
-  font-size: 13px;
-  line-height: 18px;
-  color: #323232;
-  margin: 0px;
-  font-family: "AvenirNextLTPro";
-}
-@media screen and (min-width: 768px) {
-  body {
-    font-size: 14px;
-    line-height: 22px;
-  }
-}
-
-.page-header {
-  font-size: 24px;
-  color: #FFFFFF;
-  line-height: 32px;
-  padding-left: 16px;
-}
-@media screen and (min-width: 768px) {
-  .page-header {
-    font-size: 60px;
-    line-height: 68px;
-    padding-left: 36px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .page-header {
-    padding-left: auto;
-  }
-}
-
-.section-header {
-  font-size: 24px;
-  line-height: 32px;
-  color: #000000;
-  padding-left: 16px;
-}
-@media screen and (min-width: 768px) {
-  .section-header {
-    font-size: 36px;
-    line-height: 44px;
-    padding-left: 36px;
-  }
-}
-
-.subheader {
-  font-size: 14px;
-  line-height: 22px;
-  color: #000000;
-}
-@media screen and (min-width: 768px) {
-  .subheader {
-    font-size: 24px;
-    line-height: 32px;
-  }
-}
-
-.subcopy {
-  font-size: 14px;
-  color: #000000;
-}
-
-footer {
-  font-size: 13px;
-  line-height: 18px;
-  color: #FFFFFF;
-  margin: 0px;
-}
-@media screen and (min-width: 768px) {
-  footer {
-    font-size: 14px;
-    line-height: 2opx;
-  }
-}
-
 .navbar {
   background-color: #323232;
   height: 60px;
@@ -231,87 +69,6 @@ footer {
   font-weight: 700;
   text-decoration: underline;
   font-size: 13px;
-}
-
-@font-face {
-  font-family: "AvenirNextLTPro";
-  src: url("C:UsersuserOneDrive\documentsstefan-reeves-bandsite\assets\fonts\avenirNextLTPro.ttf'") format("truetype");
-}
-body {
-  font-size: 13px;
-  line-height: 18px;
-  color: #323232;
-  margin: 0px;
-  font-family: "AvenirNextLTPro";
-}
-@media screen and (min-width: 768px) {
-  body {
-    font-size: 14px;
-    line-height: 22px;
-  }
-}
-
-.page-header {
-  font-size: 24px;
-  color: #FFFFFF;
-  line-height: 32px;
-  padding-left: 16px;
-}
-@media screen and (min-width: 768px) {
-  .page-header {
-    font-size: 60px;
-    line-height: 68px;
-    padding-left: 36px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .page-header {
-    padding-left: auto;
-  }
-}
-
-.section-header {
-  font-size: 24px;
-  line-height: 32px;
-  color: #000000;
-  padding-left: 16px;
-}
-@media screen and (min-width: 768px) {
-  .section-header {
-    font-size: 36px;
-    line-height: 44px;
-    padding-left: 36px;
-  }
-}
-
-.subheader {
-  font-size: 14px;
-  line-height: 22px;
-  color: #000000;
-}
-@media screen and (min-width: 768px) {
-  .subheader {
-    font-size: 24px;
-    line-height: 32px;
-  }
-}
-
-.subcopy {
-  font-size: 14px;
-  color: #000000;
-}
-
-footer {
-  font-size: 13px;
-  line-height: 18px;
-  color: #FFFFFF;
-  margin: 0px;
-}
-@media screen and (min-width: 768px) {
-  footer {
-    font-size: 14px;
-    line-height: 2opx;
-  }
 }
 
 .footer {
@@ -405,6 +162,75 @@ footer {
   color: #FFFFFF;
 }
 
+body {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+  color: #323232;
+  margin: 0px;
+}
+@media screen and (min-width: 768px) {
+  body {
+    font-size: 14px;
+    line-height: 22px;
+  }
+}
+
+page-header {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+  color: #FFFFFF;
+  padding-left: 16px;
+}
+@media screen and (min-width: 768px) {
+  page-header {
+    font-size: 60px;
+    line-height: 68px;
+    padding-left: 36px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  page-header {
+    padding-left: auto;
+  }
+}
+
+section-header {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+  color: #000000;
+  padding: 24px 16px 16px 16px;
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  section-header {
+    font-size: 36px;
+    line-height: 44px;
+    padding: 48px 36px 36px 36px;
+    display: block;
+  }
+}
+
+sub-header {
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 600;
+  color: #000000;
+}
+@media screen and (min-width: 768px) {
+  sub-header {
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
+
+.subcopy {
+  font-size: 14px;
+  color: #000000;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -433,6 +259,12 @@ footer {
 
 .about {
   background-color: #FFFFFF;
+  margin-bottom: 24px;
+}
+@media screen and (min-width: 768px) {
+  .about {
+    margin-bottom: 36px;
+  }
 }
 .about__container {
   margin: auto;
@@ -449,13 +281,29 @@ footer {
   width: 100%;
   max-height: 350px;
 }
+.about__quote {
+  margin-top: 16px;
+  margin-bottom: 24px;
+}
+@media screen and (min-width: 768px) {
+  .about__quote {
+    margin-top: 16px;
+    margin-bottom: 36px;
+  }
+}
 .about__paragraphs {
-  display: flex;
+  display: inline-block;
 }
 @media screen and (min-width: 768px) {
   .about__paragraphs {
-    display: inline-block;
-    width: 45%;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__text {
+    padding-right: 15px;
   }
 }
 
@@ -484,4 +332,77 @@ footer {
   max-width: 100%;
   height: auto;
   display: block;
+}
+
+.comment-form {
+  align-items: end;
+  margin: auto;
+  padding: 16px;
+}
+.comment-form input[type=text] {
+  width: 100%;
+  min-height: 36px;
+  border: 1px solid #E1E1E1;
+  border-radius: 4px;
+  padding: 12px;
+}
+@media screen and (min-width: 768px) {
+  .comment-form input[type=text] {
+    height: 48px;
+  }
+}
+.comment-form input[type=review] {
+  width: 100%;
+  min-height: 108px;
+  border: 1px solid #E1E1E1;
+  border-radius: 4px;
+  padding: 12px;
+}
+@media screen and (min-width: 768px) {
+  .comment-form input[type=review] {
+    height: 108px;
+  }
+}
+.comment-form__button {
+  display: inline;
+  color: #FFFFFF;
+  background-color: #323232;
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  margin-top: 24px;
+}
+@media screen and (min-width: 768px) {
+  .comment-form__button {
+    width: 150px;
+    padding: 0 32px;
+  }
+}
+
+.comment-list {
+  background-color: #FFFFFF;
+  padding: 10px;
+}
+.comment-list__item {
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.comment-list__name {
+  color: #000000;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.comment-list__timestamp {
+  color: #AFAFAF;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.comment-list__review {
+  color: #323232;
+  width: 100%;
 }
