--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,6 +1,36 @@
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url(../../assets/fonts/AvenirNextLTPro.ttf) format("ttf") local(Avenir Next LT Pro);
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url(../../assets/fonts/AvenirNextLTProDemi.ttf) format("ttf") local(Avenir Next LT Pro Demi);
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url(../../assets/fonts/AvenirNextLTProBold.ttf) format("ttf") local(Avenir Next LT Pro Bold);
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url(../../assets/fonts/AvenirNextLTPro.ttf) format("ttf") local(Avenir Next LT Pro);
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url(../../assets/fonts/AvenirNextLTProDemi.ttf) format("ttf") local(Avenir Next LT Pro Demi);
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url(../../assets/fonts/AvenirNextLTProBold.ttf) format("ttf") local(Avenir Next LT Pro Bold);
+  font-weight: 700;
+}
 .navbar {
   background-color: #323232;
-  height: 60px;
+  height: 5.7em;
   position: relative;
 }
 @media screen and (min-width: 768px) {
@@ -8,19 +38,20 @@
     display: flex;
     justify-content: flex-start;
     gap: 20px;
+    height: 5.2em;
   }
 }
 .navbar__logo {
   justify-content: center;
   display: flex;
-  margin: 10px 0px 3px 0px;
+  margin-top: 1.25em;
   width: 100%;
-  max-width: 120px;
-  max-height: 20px;
+  max-width: 12em;
+  max-height: 1.5em;
 }
 .navbar__logo--icon {
-  max-width: 120px;
-  max-height: 20px;
+  max-width: 12em;
+  max-height: 1.5em;
   justify-content: center;
 }
 @media screen and (min-width: 768px) {
@@ -31,11 +62,15 @@
     padding: 0px;
   }
 }
+@media screen and (min-width: 1280px) {
+  .navbar__logo {
+    margin: 0;
+  }
+}
 .navbar__menu {
   align-items: center;
   width: 100%;
-  padding-left: 16px;
-  padding-right: 16px;
+  margin-bottom: 1.5em;
   display: flex;
   flex-direction: column;
 }
@@ -43,6 +78,14 @@
   .navbar__menu {
     flex-direction: row;
     align-items: center;
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .navbar__menu {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1100px;
   }
 }
 .navbar__items {
@@ -53,24 +96,44 @@
 }
 @media screen and (min-width: 768px) {
   .navbar__items {
-    width: 200px;
+    width: -moz-fit-content;
+    width: fit-content;
   }
 }
 .navbar__link {
   text-decoration: none;
   color: #E1E1E1;
-  font-size: 13px;
   justify-items: center;
   width: 100%;
   text-align: center;
+  line-height: 2.8em;
 }
-.navbar__link:active {
+@media screen and (min-width: 768px) {
+  .navbar__link {
+    margin-right: 3em;
+    line-height: 5em;
+  }
+}
+.navbar__link.active {
   color: #FFFFFF;
-  font-weight: 700;
-  text-decoration: underline;
-  font-size: 13px;
+  border-bottom: #FFFFFF 0.3em solid;
 }
 
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url(../../assets/fonts/AvenirNextLTPro.ttf) format("ttf") local(Avenir Next LT Pro);
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url(../../assets/fonts/AvenirNextLTProDemi.ttf) format("ttf") local(Avenir Next LT Pro Demi);
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url(../../assets/fonts/AvenirNextLTProBold.ttf) format("ttf") local(Avenir Next LT Pro Bold);
+  font-weight: 700;
+}
 .footer {
   background-color: #323232;
   font-size: 13px;
@@ -162,9 +225,25 @@
   color: #FFFFFF;
 }
 
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url(../../assets/fonts/AvenirNextLTPro.ttf) format("ttf") local(Avenir Next LT Pro);
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url(../../assets/fonts/AvenirNextLTProDemi.ttf) format("ttf") local(Avenir Next LT Pro Demi);
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url(../../assets/fonts/AvenirNextLTProBold.ttf) format("ttf") local(Avenir Next LT Pro Bold);
+  font-weight: 700;
+}
 body {
-  font-size: 13px;
-  line-height: 18px;
+  font-family: "Avenir Next LT Pro";
+  font-size: 0.7em;
+  line-height: 1.45em;
   font-weight: 400;
   color: #323232;
   margin: 0px;
@@ -177,45 +256,54 @@ body {
 }
 
 page-header {
-  font-size: 24px;
-  line-height: 32px;
+  font-size: 2em;
+  line-height: 1.2em;
   font-weight: 700;
   color: #FFFFFF;
-  padding-left: 16px;
+  margin-left: 1em;
 }
 @media screen and (min-width: 768px) {
   page-header {
-    font-size: 60px;
+    font-size: 4em;
     line-height: 68px;
-    padding-left: 36px;
+    margin-left: 1em;
   }
 }
 @media screen and (min-width: 1280px) {
   page-header {
-    padding-left: auto;
+    width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 section-header {
-  font-size: 24px;
-  line-height: 32px;
+  font-size: 1.5em;
+  line-height: 2.2em;
   font-weight: 700;
   color: #000000;
-  padding: 24px 16px 16px 16px;
+  padding: 1em 1em 1em 1em;
   display: block;
 }
 @media screen and (min-width: 768px) {
   section-header {
-    font-size: 36px;
-    line-height: 44px;
-    padding: 48px 36px 36px 36px;
-    display: block;
+    font-size: 2.2em;
+    line-height: 2.5em;
+    padding: 1em 1em 0.2em 1.8em;
+  }
+}
+@media screen and (min-width: 1280px) {
+  section-header {
+    width: 1100px;
+    padding: 1em 0 0.3em 0;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 sub-header {
-  font-size: 14px;
-  line-height: 22px;
+  font-size: 1em;
+  line-height: 1.75em;
   font-weight: 600;
   color: #000000;
 }
@@ -282,8 +370,12 @@ sub-header {
   max-height: 350px;
 }
 .about__quote {
-  margin-top: 16px;
-  margin-bottom: 24px;
+  margin-top: 0.7em;
+  margin-bottom: 1.5em;
+  font-size: 1em;
+  line-height: 1.75em;
+  font-weight: 600;
+  color: #000000;
 }
 @media screen and (min-width: 768px) {
   .about__quote {
@@ -334,54 +426,96 @@ sub-header {
   display: block;
 }
 
+@media screen and (min-width: 768px) {
+  .comment-section {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 40em;
+  }
+}
+
 .comment-form {
   align-items: end;
   margin: auto;
-  padding: 16px;
+  padding: 1em 1em 1em 5em;
 }
-.comment-form input[type=text] {
+.comment-form__label {
+  font-family: "Avenir Next LT Pro";
+  color: #AFAFAF;
+  font-size: 0.8em;
+}
+.comment-form__input {
+  font-family: "Avenir Next LT Pro";
+  color: #000000;
+  font-size: 1em;
   width: 100%;
   min-height: 36px;
   border: 1px solid #E1E1E1;
-  border-radius: 4px;
-  padding: 12px;
+  border-radius: 0.25em;
+  padding: 0.75em;
+  margin-bottom: 1em;
 }
 @media screen and (min-width: 768px) {
-  .comment-form input[type=text] {
-    height: 48px;
+  .comment-form__input {
+    height: 3em;
   }
 }
-.comment-form input[type=review] {
+.comment-form__input::-moz-placeholder {
+  color: #000000;
+  padding-left: 0.3em;
+}
+.comment-form__input::placeholder {
+  color: #000000;
+  padding-left: 0.3em;
+}
+.comment-form__textarea {
+  font-family: "Avenir Next LT Pro";
+  color: #323232;
+  font-size: 1em;
   width: 100%;
-  min-height: 108px;
+  min-height: 8em;
   border: 1px solid #E1E1E1;
-  border-radius: 4px;
-  padding: 12px;
+  border-radius: 0.25em;
+  padding: 0.75em;
+  resize: none;
 }
 @media screen and (min-width: 768px) {
-  .comment-form input[type=review] {
-    height: 108px;
+  .comment-form__textarea {
+    min-height: 7em;
+    padding: 1em;
   }
+}
+.comment-form__textarea::-moz-placeholder {
+  color: #000000;
+  padding-left: 0.3em;
+}
+.comment-form__textarea::placeholder {
+  color: #000000;
+  padding-left: 0.3em;
 }
 .comment-form__button {
   display: inline;
   color: #FFFFFF;
   background-color: #323232;
   width: 100%;
-  height: 40px;
+  height: 2.7em;
   border-radius: 4px;
   margin-top: 24px;
+  cursor: pointer;
 }
 @media screen and (min-width: 768px) {
   .comment-form__button {
-    width: 150px;
-    padding: 0 32px;
+    width: 10em;
+    padding: 0 2em;
+    display: block;
+    margin: 10px 0 10px auto;
   }
 }
 
 .comment-list {
   background-color: #FFFFFF;
-  padding: 10px;
+  padding: 1em;
+  border-bottom: 2px solid #E1E1E1;
 }
 .comment-list__item {
   text-decoration: none;
@@ -389,20 +523,26 @@ sub-header {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  border-top: 2px solid #E1E1E1;
 }
 .comment-list__name {
   color: #000000;
   display: inline-flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-top: 1.3em;
+  padding-left: 3.4em;
 }
 .comment-list__timestamp {
   color: #AFAFAF;
   display: inline-flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-top: 1.3em;
 }
 .comment-list__review {
   color: #323232;
   width: 100%;
+  margin-bottom: 1em;
+  padding-left: 4em;
 }
